Project

General

Profile

Actions

Bug #17428

closed

Method#inspect bad output for class methods

Bug #17428: Method#inspect bad output for class methods

Added by marcandre (Marc-Andre Lafortune) almost 6 years ago. Updated over 5 years ago.

Status:
Closed
Target version:
-
ruby -v:
ruby 3.0.0dev (2020-12-22T17:37:59Z master 487355873a) [x86_64-darwin18]
[ruby-core:101635]

Description

$ $ ruby -e 'p String.method(:prepend)'
# 2.7.0:
#<Method: String.prepend(*)>
# 3.0.0:
#<Method: #<Class:Object>(Module)#prepend(*)>

@jeremyevans found it shows the method as pertaining to one level too high (which is good for objects as we don't want to show the singleton class there, but not for classes).

Probably due to #15608

Actions

Also available in: PDF Atom